--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css" type="text/css" media="all"/>
     <title>Document</title>
 </head>
 <body>
+    <div class="content">
+        <div class="column_1">
+            <img id="avatar1" width="80%">
+        </div>
+
+        <div class="column_2">
+                <p class="card-name" id="card1-name"></h1>
+                <p class="card-price" id="card1-price"></p>
+                <p class="card-description" id="card1-description"></p>
+                <p class="card-weight" id="card1-weight"></p>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
