Add 2 cards Add button

--- a/index.html
+++ b/index.html
@@ -8,18 +8,37 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="content">
-        <div class="column_1">
+
+    <div class="cards">
+        <div class="columnfirst">
             <img id="avatar1" width="80%">
         </div>
 
-        <div class="column_2">
+        <div class="columnsecond">
                 <p class="card-name" id="card1-name"></h1>
-                <p class="card-price" id="card1-price"></p>
+                <p class="card-price1" id="card1-price"></p>
                 <p class="card-description" id="card1-description"></p>
                 <p class="card-weight" id="card1-weight"></p>
+                <button id="but1">Купить</button>
         </div>
     </div>
+    
+    <div class="cards">
+
+        <div class="columnfirst">
+            <img id="avatar2" width="80%">
+        </div>
+
+        <div class="columnsecond">
+                <p class="card-name" id="card2-name"></h1>
+                <p class="card-price2" id="card2-price"></p>
+                <p class="card-description" id="card2-description"></p>
+                <p class="card-weight" id="card2-weight"></p>
+                <button id="but2">Купить</button>
+        </div>
+
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
